--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Memory Game - Pokémon</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" id="favicon">
+    <title>Pokémon - Memory Game</title>
   </head>
   <body>
     <noscript>
