--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Pokémon - Memory Game, made with Vue.js and Buefy/Bulma">
+    <meta name="author" content="Vinicius Reis">
+    <meta name="application-name" content="Pokémon - Memory Game">
+    <meta property="og:image" content="<%= BASE_URL %>/img/icons/apple-touch-icon-120x120.png">
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" id="favicon">
     <title>Pokémon - Memory Game</title>
