add html og tags

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <meta name="author" content="Vinicius Reis">
     <meta name="application-name" content="Pokémon - Memory Game">
     <meta property="og:image" content="<%= BASE_URL %>/img/icons/apple-touch-icon-120x120.png">
+    <meta property="og:title" content="Pokémon - Memory Game">
+    <meta property="og:site_name" content="Pokémon - Memory Game">
+    <meta property="og:url" content="https://vue-pokemon-memory-game.vinicius73.dev/">
+    <meta property="og:description" content="Pokémon - Memory Game, made with Vue.js and Buefy/Bulma">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" id="favicon">
     <title>Pokémon - Memory Game</title>
