--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <meta property="og:url" content="https://vue-pokemon-memory-game.vinicius73.dev/">
     <meta property="og:description" content="Pokémon - Memory Game, made with Vue.js and Buefy/Bulma">
     <meta property="og:type" content="website">
+    <meta name="theme-color" content="#ee1515">
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" id="favicon">
     <title>Pokémon - Memory Game</title>
