--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="Pokémon - Memory Game, made with Vue.js and Buefy/Bulma">
     <meta name="author" content="Vinicius Reis">
     <meta name="application-name" content="Pokémon - Memory Game">
-    <meta property="og:image" content="<%= BASE_URL %>/img/icons/apple-touch-icon-120x120.png">
+    <meta property="og:image" content="<%= BASE_URL %>img/demo-cover.png">
+    <meta property="og:image:width" content="1388">
+    <meta property="og:image:height" content="831">
     <meta property="og:title" content="Pokémon - Memory Game">
     <meta property="og:site_name" content="Pokémon - Memory Game">
     <meta property="og:url" content="https://vue-pokemon-memory-game.vinicius73.dev/">
